--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,19 +8,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        <nav class="navbar navbar-expand-md bg-danger w-100">
-    <div class="container-fluid">
-      <a class="btn btn-danger fs-5 m-1 me-3" href="/">HOME</a>
-      <button class="navbar-toggler bg-light m-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="btn btn-light fs-5 m-1" href="/realtimeproducts">Products</a>
-        </div>
-      </div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="/"> Home <span class="sr-only"></span></a>
+      <a class="btn btn-light fs-5 m-1" href="/realtimeproducts">Products</a>
+      <a class="nav-item nav-link" href="/api/products"> Api/Products(para testear) </a>
+      <a class="nav-item nav-link" href="/api/cart"> /api/cart(para testear)</a>
     </div>
-  </nav>
+  </div>
+</nav>
+
         {{{body}}}
 <footer class="bg-danger w-100">
     <p class="text-light m-2 text-center fw-bolder fs-4">Shoe Shop By Rodrigo Alcaraz</p>
