--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>{{title}}</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/"> Home <span class="sr-only"></span></a>
-      <a class="btn btn-light fs-5 m-1" href="/realtimeproducts">Products</a>
-      <a class="nav-item nav-link" href="/api/products"> Api/Products(para testear) </a>
-      <a class="nav-item nav-link" href="/api/cart"> /api/cart(para testear)</a>
+     <nav class="navbar navbar-expand-md bg-danger w-100">
+    <div class="container-fluid">
+      <a class="btn btn-danger fs-5 m-1 me-3" href="/">Weider</a>
+      <button class="navbar-toggler bg-light m-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="btn btn-light fs-5 m-1" href="/">Home</a>
+          <a class="btn btn-light fs-5 m-1" href="/realtimeproducts">Products</a>
+          <a class="btn btn-light fs-5 m-1" href="/chat">Chat</a>
+        </div>
+      </div>
     </div>
-  </div>
-</nav>
-
+  </nav>
         {{{body}}}
 <footer class="bg-danger w-100">
-    <p class="text-light m-2 text-center fw-bolder fs-4">Shoe Shop By Rodrigo Alcaraz</p>
+    <p class="text-light m-2 text-center fw-bolder fs-4">Weider By Rodrigo Alcaraz</p>
   </footer>
     </body>
 </html>
